@@ -18,8 +18,19 @@ package com.alibaba.cloud.ai.service.dsl.adapters;
 import com.alibaba.cloud.ai.model.App;
 import com.alibaba.cloud.ai.model.AppMetadata;
 import com.alibaba.cloud.ai.model.Variable;
+import com.alibaba.cloud.ai.model.VariableType;
 import com.alibaba.cloud.ai.model.chatbot.ChatBot;
-import com.alibaba.cloud.ai.model.workflow.*;
+import com.alibaba.cloud.ai.model.workflow.Edge;
+import com.alibaba.cloud.ai.model.workflow.Graph;
+import com.alibaba.cloud.ai.model.workflow.Node;
+import com.alibaba.cloud.ai.model.workflow.NodeData;
+import com.alibaba.cloud.ai.model.workflow.NodeType;
+import com.alibaba.cloud.ai.model.workflow.Workflow;
+import com.alibaba.cloud.ai.model.workflow.nodedata.DocumentExtractorNodeData;
+import com.alibaba.cloud.ai.model.workflow.nodedata.HttpNodeData;
+import com.alibaba.cloud.ai.model.workflow.nodedata.LLMNodeData;
+import com.alibaba.cloud.ai.model.workflow.nodedata.QuestionClassifierNodeData;
+import com.alibaba.cloud.ai.model.workflow.nodedata.VariableAggregatorNodeData;
 import com.alibaba.cloud.ai.service.dsl.DSLDialectType;
 import com.alibaba.cloud.ai.service.dsl.Serializer;
 import com.alibaba.cloud.ai.service.dsl.NodeDataConverter;
@@ -32,8 +43,15 @@ import org.apache.commons.lang3.NotImplementedException;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Component;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * DifyDSLAdapter converts Dify DSL to {@link App} and vice versa.
@@ -110,14 +128,13 @@ public class DifyDSLAdapter extends AbstractDSLAdapter {
 		objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
 		// map key is snake_case style
 		objectMapper.setPropertyNamingStrategy(PropertyNamingStrategies.SNAKE_CASE);
+		List<Variable> convVars = new ArrayList<>();
 		if (workflowData.containsKey("conversation_variables")) {
 			List<Map<String, Object>> variables = (List<Map<String, Object>>) workflowData
 				.get("conversation_variables");
-			List<Variable> workflowVars = variables.stream()
-				.map(variable -> objectMapper.convertValue(variable, Variable.class))
-				.collect(Collectors.toList());
-			workflow.setWorkflowVars(workflowVars);
+			convVars = variables.stream().map(variable -> objectMapper.convertValue(variable, Variable.class)).toList();
 		}
+
 		if (workflowData.containsKey("environment_variables")) {
 			List<Map<String, Object>> variables = (List<Map<String, Object>>) workflowData.get("environment_variables");
 			List<Variable> envVars = variables.stream()
@@ -125,7 +142,49 @@ public class DifyDSLAdapter extends AbstractDSLAdapter {
 				.collect(Collectors.toList());
 			workflow.setEnvVars(envVars);
 		}
-		workflow.setGraph(constructGraph((Map<String, Object>) workflowData.get("graph")));
+
+		Graph graph = constructGraph((Map<String, Object>) workflowData.get("graph"));
+		workflow.setGraph(graph);
+		// register overAllState output key
+		List<Variable> extraVars = graph.getNodes().stream().map(Node::getData).flatMap(nd -> {
+			if (nd instanceof DocumentExtractorNodeData) {
+				return Stream.of(DocumentExtractorNodeData.DEFAULT_OUTPUT_SCHEMA);
+			}
+			if (nd instanceof HttpNodeData http) {
+				return Optional.ofNullable(http.getOutputKey())
+					.map(k -> new Variable(k, VariableType.STRING.value()))
+					.stream();
+			}
+			if (nd instanceof LLMNodeData llm) {
+				return Optional.ofNullable(llm.getOutputKey())
+					.map(k -> new Variable(k, VariableType.STRING.value()))
+					.stream();
+			}
+			if (nd instanceof VariableAggregatorNodeData agg) {
+				return Optional.ofNullable(agg.getOutputKey()).map(k -> new Variable(k, agg.getOutputType())).stream();
+			}
+			if (nd instanceof QuestionClassifierNodeData classifier) {
+				Stream<Variable> outputKeyVar = Optional.ofNullable(classifier.getOutputKey())
+					.map(k -> new Variable(k, VariableType.STRING.value()))
+					.stream();
+
+				Stream<Variable> inputVars = Optional.ofNullable(classifier.getInputs())
+					.orElse(List.of())
+					.stream()
+					.map(sel -> new Variable(sel.getName(), VariableType.STRING.value()));
+
+				return Stream.concat(outputKeyVar, inputVars);
+			}
+			return Stream.empty();
+			// todo： other node may create overallstate variables
+		}).toList();
+
+		List<Variable> allVars = new ArrayList<>(Stream.concat(convVars.stream(), extraVars.stream())
+			.collect(Collectors.toMap(Variable::getName, v -> v, (v1, v2) -> v1))
+			.values());
+
+		workflow.setWorkflowVars(allVars);
+
 		return workflow;
 	}
 
@@ -155,6 +214,13 @@ public class DifyDSLAdapter extends AbstractDSLAdapter {
 		for (Map<String, Object> nodeMap : nodeMaps) {
 			Map<String, Object> nodeDataMap = (Map<String, Object>) nodeMap.get("data");
 			String difyNodeType = (String) nodeDataMap.get("type");
+			if (difyNodeType == null || difyNodeType.isBlank()) {
+				// This node is just a "note", skip it, and the corresponding node will
+				// not be generated [compatible dify]
+				continue;
+			}
+			String nodeId = (String) nodeMap.get("id");
+			nodeDataMap.put("id", nodeId);
 			// determine the type of dify node is supported yet
 			NodeType nodeType = NodeType.fromDifyValue(difyNodeType)
 				.orElseThrow(() -> new NotImplementedException("unsupported node type " + difyNodeType));
